web-vote-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: web-vote-app
  template:
    metadata:
      labels:
        appname: web-vote-app
    spec:
      containers:
        - name: web-vote-app
          image: brindilsz/web-vote-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    appname: web-vote-app
  name: web-vote-app
  annotations:
spec:
  type:  NodePort
  ports:
    - port: 8081
      targetPort: 80
      protocol: TCP
  selector:
    appname: web-vote-app
