web-vote-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    appname: web-vote-app
  name: web-vote-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: vote.k3s.localdev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-vote-app
            port: 
              number: 8081
